--- a/src/HA.Library.Core/HA.Library.Core.csproj
+++ b/src/HA.Library.Core/HA.Library.Core.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\Books\AddBook\" />
+  </ItemGroup>
+
 </Project>
